# Gzdoom-clone

./: README.md
1-Self-study/gzclone/: CMakeLists.txt
1-Self-study/gzclone/src/: main.cpp
1-Self-study/gzclone/src/core/: Log.cpp  Log.h
